--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ main {
     padding: 24px 0;
 }
 
-.header_list-item:first-child {
+.header_list-item:first-child .header_list-item-link{
     position: relative;
     color: #404bbf; 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -192,6 +192,7 @@ main {
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background: #4d5ae5;
     cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .promo-button:hover,
@@ -404,7 +405,7 @@ main {
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #f4f4fd;
-    background-color: #3f51b5;
+    background-color: #4d5ae5;
     width: 100%;
     height: 100%;
     transform: translateY(100%);
@@ -421,11 +422,11 @@ main {
 .footer .container {
     display: flex;
     align-items: baseline;
-    gap: 120px;
 }
 
 .footer-logo {
     margin-bottom: 16px;
+    margin-right: 120px;
 }
 
 
@@ -448,27 +449,31 @@ main {
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
-    color: #fff;
+    color: #FFFFFF;
 }
 
 .social_media-icon_list-item {
+    width: 40px;
+    height: 40px;
+}
+
+.social_media-icon_list-item-link {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
-    border-radius: 100%;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
     background-color: #4d5ae5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social_media-icon_list-item:hover,
-.social_media-icon_list-item:focus {
+.social_media-icon_list-item-link:hover,
+.social_media-icon_list-item-link:focus {
     background: #31D0AA;
 }
 
 .social_media-icon {
-    width: 24px;
-    height: 24px;
     fill: #f4f4fd;
 }
 
