--- a/css/style.css
+++ b/css/style.css
@@ -149,12 +149,13 @@ main {
 
 .promo {
     padding: 188px 0;
+    margin: 0 auto;
     max-width: 1440px;
     background-image:linear-gradient(
         to bottom, 
         rgba(46, 47, 66, 0.7), 
         rgba(46, 47, 66, 0.7)
-        ), url(/images/people-office.jpg);
+        ), url(../images/people-office.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -424,14 +425,14 @@ main {
     align-items: baseline;
 }
 
-.footer-logo {
+.footer-logo-block {
     margin-right: 120px;
 }
 
-.logo {
+.footer-logo {
+    display: inline-block;
     margin-bottom: 16px;
 }
-
 
 .logo-white {
     color: #f4f4fd;
